// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/MaxHeight handles % value 1`] = `
{
  "classNames": [
    "--type-literal",
  ],
  "variables": {
    "--rs-max-h-s": "50%",
  },
}
`;

exports[`Styles/MaxHeight handles px value 1`] = `
{
  "classNames": [
    "--type-literal",
  ],
  "variables": {
    "--rs-max-h-s": "50px",
  },
}
`;

exports[`Styles/MaxHeight handles responsive value 1`] = `
{
  "classNames": [
    "--type-literal",
    "--type-literal--l",
  ],
  "variables": {
    "--rs-max-h-l": "50%",
    "--rs-max-h-s": "50px",
  },
}
`;

exports[`Styles/MaxHeight handles undefined value 1`] = `null`;

exports[`Styles/MaxHeight handles unit value 1`] = `
{
  "classNames": [
    "--type-unit",
  ],
  "variables": {
    "--rs-max-h-s": 5,
  },
}
`;
